--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
     }
 
     .overlay-video {
-      display: block;
-      margin: 100px auto 40px;
-      max-width: 80%;
-      height: auto;
+      position: absolute;
+      top: 50px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 600px;
       z-index: 1;
       pointer-events: none;
     }
