--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <!-- Фоновое видео -->
   <video class="background-video" autoplay muted loop>
-    <source src="bg_main.mp4" type="video/mp4">
+    <source src="1.mp4" type="video/mp4">
     
   </video>
 
