--- a/index.html
+++ b/index.html
@@ -68,10 +68,9 @@
 <body>
 
   <!-- Фоновое видео -->
-  <video class="background-video" autoplay muted loop>
-    <source src="1.mp4" type="video/mp4">
-    
-  </video>
+ <video class="background-video" autoplay muted loop playsinline>
+  <source src="https://www.w3schools.com/howto/rain.mp4" type="video/mp4">
+</video>
 
   <!-- Видео-заголовок (WebM) -->
   <video class="overlay-video" autoplay muted loop>
