--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Видео-фон сайт</title>
+  <title>by_Music_Ford</title>
   <style>
     * {
       margin: 0;
@@ -28,11 +28,10 @@
     }
 
     .overlay-video {
-      position: absolute;
-      top: 50px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 600px;
+       display: block;
+      margin: 100px auto 40px;
+      max-width: 80%;
+      height: auto;
       z-index: 1;
       pointer-events: none;
     }
@@ -40,20 +39,26 @@
     .content {
       position: relative;
       z-index: 2;
-      padding: 100px 20px 40px;
-      background: rgba(0, 0, 0, 0.5);
+      background: rgba(0, 0, 0, 0.6); /* Прозрачный фон */
+      padding: 40px 20px;
       max-width: 900px;
-      margin: 0 auto;
+      margin: 0 auto 100px;
       border-radius: 12px;
     }
 
     .content h1 {
-      margin-bottom: 20px;
+     margin-bottom: 20px;
+      text-align: center;
+    }
+    .content p {
+      margin: 20px 0;
+      line-height: 1.6;
     }
 
     .content img {
       max-width: 100%;
-      margin: 20px 0;
+      display: block;
+      margin: 20px auto;
       border-radius: 8px;
     }
   </style>
@@ -63,13 +68,13 @@
   <!-- Фоновое видео -->
   <video class="background-video" autoplay muted loop>
     <source src="bg_main.mp4" type="video/mp4">
-    Ваш браузер не поддерживает видео.
+
   </video>
 
   <!-- Видео-заголовок (WebM) -->
   <video class="overlay-video" autoplay muted loop>
     <source src="title.webm" type="video/webm">
-    Ваш браузер не поддерживает видео.
+    
   </video>
 
 <!-- Контент -->
