--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <!-- Фоновое видео -->
   <video class="background-video" autoplay muted loop>
-    <source src="bg_main.mp4" type="video/mp4">
+    <source src="lumi.mp4" type="video/mp4">
 
   </video>
 
