--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
     }
 
     .content h1 {
-     margin-bottom: 20px;
+      font-size: 36px
+      margin-bottom: 20px;
       text-align: center;
     }
     .content p {
+      font-size: 24px
       margin: 20px 0;
       line-height: 1.6;
     }
@@ -81,12 +83,12 @@
   <div class="content">
     <h1>Дорогие игроки Aion, здравствуйте.</h1>
     <p>Это команда разработчиков Aion. Сегодня мы подготовили это сообщение, чтобы заранее сообщить вам об изменениях, которые произойдут в одном из будущих обновлений, касающихся Люминеса, а также магических камней и божественных камней.</p>
-    <img src="image1.jpg" alt="Картинка 1">
+   
     <h1>Изменения Люминеса</h1>
     <p>Класс Люминес был задуман как дамагер, способный быстро наносить мощный урон, и в этом аспекте он завоевал большую любовь игроков.
 Однако по сравнению с другими классами, у Люминеса слишком высокая устойчивость урона (sustained DPS) и слишком легко достигается минимальная эффективность, из-за чего постоянно поднимается вопрос баланса.
 Особенно в составе групп для подземелий и рейдов чрезмерное предпочтение этого класса стало сказываться на разнообразии в игре, и мы хотим учесть обратную связь от игроков по этому поводу.</p>
-    <img src="image2.jpg" alt="Картинка 2">
+    
   </div>
 
 </body>
