--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     }
 
     .content h1 {
-      font-size: 36px
+      font-size: 50px
       margin-bottom: 20px;
       text-align: center;
     }
     .content p {
-      font-size: 24px
+      font-size: 36px
       margin: 20px 0;
       line-height: 1.6;
     }
@@ -88,7 +88,19 @@
     <p>Класс Люминес был задуман как дамагер, способный быстро наносить мощный урон, и в этом аспекте он завоевал большую любовь игроков.
 Однако по сравнению с другими классами, у Люминеса слишком высокая устойчивость урона (sustained DPS) и слишком легко достигается минимальная эффективность, из-за чего постоянно поднимается вопрос баланса.
 Особенно в составе групп для подземелий и рейдов чрезмерное предпочтение этого класса стало сказываться на разнообразии в игре, и мы хотим учесть обратную связь от игроков по этому поводу.</p>
-    
+
+   <h1>Корректировка урона основных умений</h1>
+     <p>Мы планируем понизить урон у ключевых умений Люминеса — "Ру", "Ра", "Пи", "Сжатие сердца (Вампирик)", "Спиральная вспышка(триггер на реген маны)", и "Молниеносный удар грома (пича-пича-пича)".<p>
+    <img src="RU.png" alt="Картинка 2">
+        <img src="RUO.png" alt="Картинка 21">
+        <img src="RA.png" alt="Картинка 12">
+    <p>  В случае с "Лу", "Ра" и "Пи" мы значительно увеличим расход MP, чтобы повысить важность управления ментальными ресурсами (маной),
+      а также скорректируем урон, возникающий при их комбинировании.<p>
+    <p>Что касается "Сжатия сердца", "Спиральной вспышки" и "Молниеносного удара грома", то рост урона в зависимости от уровня навыка будет снижен по сравнению с текущими значениями.
+      <img src="vamp.png" alt="Картинка 3">
+        <img src="lighting.png" alt="Картинка 11"> 
+      <img src="mana.png" alt="Картинка 14">
+<p>
   </div>
 
 </body>
