--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
 
    <h1>Корректировка урона основных умений</h1>
      <p>Мы планируем понизить урон у ключевых умений Люминеса — "Ру", "Ра", "Пи", "Сжатие сердца (Вампирик)", "Спиральная вспышка(триггер на реген маны)", и "Молниеносный удар грома (пича-пича-пича)".<p>
-    <img src="RU.png" alt="Картинка 2">
+    <img src="Ru.png" alt="Картинка 2">
         <img src="RUO.png" alt="Картинка 21">
-        <img src="RA.png" alt="Картинка 12">
+        <img src="Ra.png" alt="Картинка 12">
     <p>  В случае с "Лу", "Ра" и "Пи" мы значительно увеличим расход MP, чтобы повысить важность управления ментальными ресурсами (маной),
       а также скорректируем урон, возникающий при их комбинировании.<p>
     <p>Что касается "Сжатия сердца", "Спиральной вспышки" и "Молниеносного удара грома", то рост урона в зависимости от уровня навыка будет снижен по сравнению с текущими значениями.
       <img src="vamp.png" alt="Картинка 3">
-        <img src="lighting.png" alt="Картинка 11"> 
+        <img src="LighSkill.png" alt="Картинка 11"> 
       <img src="mana.png" alt="Картинка 14">
 <p>
   </div>
