--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
 
     .content h1 {
       font-size: 50px
-      margin-bottom: 20px;
+      margin: 60px 0 30px;;
       text-align: center;
     }
     .content p {
       font-size: 36px
-      margin: 20px 0;
+        margin-top: 10px;
+  
       line-height: 1.6;
     }
 
@@ -178,13 +179,13 @@
 А все уровни предметов получат ощутимую ценность.
 
 И поскольку удобство и применение этих камней будет значительно увеличено,
-мы также повысим частоту их выпадения, чтобы вы могли получать их намного чаще, чем раньше.
+мы также повысим частоту их выпадения, чтобы вы могли получать их намного чаще, чем раньше. <p> 
 <p> <p>
-Aion продолжит внимательно отслеживать и улучшать все аспекты игры, чтобы не оставалось ни одной неудовлетворённой части.
+ <p>Aion продолжит внимательно отслеживать и улучшать все аспекты игры, чтобы не оставалось ни одной неудовлетворённой части. <p>
 <p> <p>
-Спасибо.
+ <p>Спасибо. <p>
 
-<p>
+
   </div>
 
 </body>
