--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     }
 
     .content h1 {
-      font-size: 50px
-      margin: 60px 0 30px;;
+      font-size: 50px;
+      margin: 60px 0 30px;
       text-align: center;
     }
     .content p {
-      font-size: 36px
+      font-size: 36px;
         margin-top: 10px;
   
       line-height: 1.6;
@@ -130,9 +130,9 @@
 
 <p>
   <p> <p>
-<h1>Расширение рангов и добавление системы возврата<h1>
-  <p> <p>
-<p> На протяжении долгого времени магические и божественные камни существовали в одном и том же ранге,
+<h1>Расширение рангов и добавление системы возврата</h1>
+
+  <p> На протяжении долгого времени магические и божественные камни существовали в одном и том же ранге,
 не имея чётких целей для дальнейшего развития, из-за чего их ценность постепенно снижалась.
 
 Чтобы предложить игрокам новую цель для фарма, мы планируем добавить предметы следующего ранга как для магических, так и для божественных камней.
