--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 
 
-    <h1>Апгрейд низкоуровневых магических и божественных камней — «Алтарь Превосхождения»<h1>
+    <h1>Апгрейд низкоуровневых магических и божественных камней — «Алтарь Превосхождения»</h1>
       <p> <p>
         <p> Чтобы повысить ценность получения низкоуровневых магических и божественных камней,
 а также стимулировать игроков стремиться к более высокому рангу,
