--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       text-align: center;
     }
     .content p {
-      font-size: 36px;
-        margin-top: 10px;
-  
-      line-height: 1.6;
+     font-size: 36px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  line-height: 1.6;
     }
 
     .content img {
