--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   margin-top: 20px;
   margin-bottom: 20px;
   line-height: 1.6;
+      text-align: center;
     }
 
     .content img {
@@ -181,9 +182,12 @@
 И поскольку удобство и применение этих камней будет значительно увеличено,
 мы также повысим частоту их выпадения, чтобы вы могли получать их намного чаще, чем раньше. <p> 
 <p> <p>
- <p>Aion продолжит внимательно отслеживать и улучшать все аспекты игры, чтобы не оставалось ни одной неудовлетворённой части. <p>
-<p> <p>
+     <h1>Aion продолжит внимательно отслеживать и улучшать все аспекты игры, чтобы не оставалось ни одной неудовлетворённой части. </h1>
+
  <p>Спасибо. <p>
+
+
+     <img src="tg.png" alt="Картинка 99">  
 
 
   </div>
